# super_maze

./: .gitignore  CMakeLists.txt  build.sh  readme.md  save_test.lab
src/: labyrinth.c  labyrinth.h  main.c  utils.h  window.c  window.h
src/mods/: editable_labyrinth.c  editable_labyrinth.h  main_screen.c  main_screen.h  playable_labyrinth.c  playable_labyrinth.h
src/widget/: WidgetController.c  WidgetController.h  widget.c  widget.h
